ont-api: [#59] fix issue with high number of recursive imports (optimize OntologyLoaderImpl#makeUnionGraph & GraphTransformers#transform)